# mnemo-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  decomposer_comparison.py  docker-compose.yml  pyproject.toml  schema.sql
docs/: admin_spec.md  architecture.md  embedding_model_upgrade.md  episodic_suppression-tension.md  episodic_suppression.md  mnemo-confidence-audit-23042026.md  mnemo-decomposer-audit-23042026.md  mnemo-entity-resolution-audit-24042026.md  mnemo-iteration-23042026.md  mnemo_api_reference.md  mnemo_arc_decomposer_spec.md  mnemo_build_spec_06032026.md  mnemo_chassis_spec.md  mnemo_implementation_spec.md  mnemo_improvement_20261703.md  mnemo_llm_type_classification_spec.md  mnemo_local_auth_spec.md  mnemo_multi_tenant_mcp_spec.md  mnemo_mvp_recall_spec.md  mnemo_operator_auth_spec.md  mnemo_overview.md  mnemo_recall_controls_spec.md  mnemo_recall_quality.md  mnemo_sharing_auth.md  mnemo_sharing_mcp_spec.md  mnemo_sharing_scope.md  mnemo_technical_overview.md  overview_for_cofounder.md  rbac_lite_spec.md  research_synopsis.md  revoke_share.md  technical_reference.md  testing_results.md
docs/diagrams/: capability_dag.mmd  knowledge_graph.mmd  recall.mmd  recall_shared.mmd  remember.mmd
docs/plans/: 2026-03-09-multi-tenant-mcp.md
migrations/: 001_admin_schema.sql  002_rbac_lite.sql  003_sharing_scope.sql  004_fix_effective_confidence_volatility.sql  005_remembered_on.sql  006_lifecycle_edges.sql
mnemo/: cli.py
mnemo/client/: mnemo_client.py
mnemo/mcp/: __init__.py  mcp_server.py
scripts/: apply_001_admin_schema.sh  apply_002_rbac_lite.sh  apply_005_remembered_on.sh  migrate_rbac.py  migrate_to_operator_auth.sql  re_embed.py  reclassify_atoms.py
tests/: conftest.py  test_addresses.py  test_admin_integration.py  test_api.py  test_bayesian_update.py  test_capabilities.py  test_cli.py  test_client.py  test_confidence_metadata.py  test_consolidation.py  test_create_edge_metadata.py  test_cross_call_edges.py  test_decomposer.py  test_decomposer_usage.py  test_episodic_recency.py  test_graph_recall.py  test_input_validation.py  test_lifecycle_service.py  test_llm_decomposer.py  test_logging_config.py  test_mcp.py  test_rbac.py  test_recall_lifecycle_metadata.py  test_recall_ranking.py  test_sharing.py  test_sharing_scope.py  test_simulation.py  test_specificity_penalty.py  test_stats_enrichment.py  test_store_from_text_new_ids.py  test_store_status.py  test_trust.py  test_views.py
(+48 files in other folders)
